# cms-open-data

./: .commitlintrc.cjs  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  README.md  REVIEW.md  package.json  pyproject.toml  ruff.toml
.claude/: settings.json
.github/workflows/: claude-review.yml  lint.yml  test.yml
dagster/cms_pipelines/: README.md  pyproject.toml
dagster/cms_pipelines/.dg/: telemetry.yaml
dagster/cms_pipelines/src/cms_pipelines/: __init__.py  definitions.py
dagster/cms_pipelines/src/cms_pipelines/defs/: __init__.py  resources.py
dagster/cms_pipelines/src/cms_pipelines/defs/cms/: __init__.py  bulk_csv_assets.py  healthcare_gov.py  io_manager.py  nppes.py  qhp_zip_assets.py  registry_assets.py  resources.py  socrata.py
dagster/cms_pipelines/src/cms_pipelines/defs/cms_analytics/: defs.yaml
dagster/cms_pipelines/src/cms_pipelines/defs/io_managers/: __init__.py  parquet.py
dagster/cms_pipelines/tests/: __init__.py  conftest.py  test_bulk_csv_assets.py  test_cms_assets.py  test_compute_kinds.py  test_io_manager.py  test_qhp_zip_assets.py  test_resources.py  test_smoke.py
dbt/cms_analytics/: .sqlfluff  README.md  dbt_project.yml  profiles.yml  pyproject.toml
dbt/cms_analytics/models/staging/cms/: _cms__models.yml  _cms__sources.yml  stg_cms__example.sql  stg_cms__hospital_general_information.sql
docs/policies/: no-any.md
libs/cms_api/: README.md  datasets.toml  pyproject.toml
libs/cms_api/src/cms_api/: __init__.py  _http.py  _types.py  dkan.py  healthcare_gov.py  nppes.py  registry.py  socrata.py
libs/cms_api/tests/: __init__.py  conftest.py  test_dkan.py  test_healthcare_gov.py  test_nppes.py  test_registry.py  test_socrata.py
scripts/: gen_cms_sources.py
scripts/local-ci/: run-subproject-tests.sh
scripts/ralph/: README.md  RUNBOOK.md  init.sh  ralph.sh
scripts/ralph/templates/: AGENTS_RALPH.md  PROMPT_build.md  PROMPT_plan.md
src/cms_open_data/: __init__.py
tests/: test_dbt_sources_in_sync.py
