[project]
name = "cms-open-data"
version = "0.1.0"
description = "A modern data stack for Medicare and Medicaid open data."
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["interrogate>=1.7.0", "pre-commit>=4.6.0", "ruff>=0.15.12"]
