[project]
name = "cms-open-data"
version = "0.1.0"
description = "A modern data stack for Medicare and Medicaid open data."
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["interrogate>=1.7.0", "pre-commit>=4.6.0", "pytest>=8.3.5", "pytest-cov>=6.0.0", "ruff>=0.15.12"]

[tool.uv.workspace]
members = []

[tool.pytest.ini_options]
minversion = "8.3"
testpaths = ["tests"]
addopts = ["--strict-markers", "--tb=short", "-v"]
