[project]
name = "cms-open-data"
version = "0.1.0"
description = "A modern data stack for Medicare and Medicaid open data."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Turner Luke", email = "turnermluke@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["cms-api"]

[project.urls]
Repository = "https://github.com/turnerluke/cms-open-data"
Issues = "https://github.com/turnerluke/cms-open-data/issues"

[dependency-groups]
dev = ["interrogate>=1.7.0", "pre-commit>=4.6.0", "pytest>=8.3.5", "pytest-cov>=6.0.0", "ruff>=0.15.17"]

[tool.uv.workspace]
members = ["libs/cms_api", "dagster/cms_pipelines"]

[tool.uv.sources]
cms-api = { workspace = true }
cms-pipelines = { workspace = true }

[tool.pytest.ini_options]
minversion = "8.3"
testpaths = ["tests"]
addopts = ["--strict-markers", "--tb=short", "-v"]
