[project]
name = "cms-pipelines"
version = "0.1.0"
description = "Dagster orchestration for the CMS open-data lakehouse."
readme = "README.md"
license = "MIT"
authors = [{ name = "Turner Luke", email = "turnermluke@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["dagster==1.13.7"]

[project.urls]
Repository = "https://github.com/turnerluke/cms-open-data"
Issues = "https://github.com/turnerluke/cms-open-data/issues"

[dependency-groups]
dev = ["dagster-dg-cli", "dagster-webserver"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cms_pipelines"]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "cms_pipelines"
registry_modules = ["cms_pipelines.components.*"]

[tool.pytest.ini_options]
minversion = "8.3"
testpaths = ["tests"]
addopts = ["--strict-markers", "--tb=short", "-v"]
