[project]
name = "cms-pipelines"
version = "0.1.0"
description = "Dagster orchestration for the CMS open-data lakehouse."
readme = "README.md"
license = "MIT"
authors = [{ name = "Turner Luke", email = "turnermluke@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["cms-api", "dagster==1.13.12", "dagster-dbt>=0.29.7", "dbt-duckdb>=1.10.1", "duckdb>=1.0.0", "pyarrow>=18.0.0"]

[project.urls]
Repository = "https://github.com/turnerluke/cms-open-data"
Issues = "https://github.com/turnerluke/cms-open-data/issues"

[dependency-groups]
dev = ["dagster-dg-cli", "dagster-webserver", "pytest>=8.3.5", "pytest-cov>=6.0.0", "respx>=0.21.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cms_pipelines"]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "cms_pipelines"
registry_modules = ["cms_pipelines.components.*"]

[tool.pytest.ini_options]
minversion = "8.3"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-v",
    "--cov=src/cms_pipelines",
    "--cov-report=term-missing",
    "--cov-branch",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["src/cms_pipelines"]
relative_files = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]
