[project]
name = "cms-analytics"
version = "0.1.0"
description = "dbt transformations for the CMS open-data lakehouse on DuckDB."
readme = "README.md"
license = "MIT"
authors = [{ name = "Turner Luke", email = "turnermluke@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["dbt-core>=1.10.0,<1.12.0", "dbt-duckdb>=1.10.0,<1.12.0"]

[project.urls]
Repository = "https://github.com/turnerluke/cms-open-data"
Issues = "https://github.com/turnerluke/cms-open-data/issues"

[dependency-groups]
dev = ["sqlfluff>=3.2.0", "sqlfluff-templater-dbt>=3.2.0"]

[tool.uv]
package = false
